--- a/src/App.css
+++ b/src/App.css
@@ -5,42 +5,15 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-/* .App {
+.content {
+  background-color: #F8F8FF;
+}
+
+.pageTitle {
+  font-size: 10vh;
   text-align: center;
-  font-family: Verdana, Tahoma, sans-serif;
-} */
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-image: linear-gradient(90deg, rgba(62, 211, 208, 0.785) 5%, rgba(7,150,255,0.8939950980392157) 50%, rgba(93,57,255,0.8239670868347339) 95%);
+  background-clip: text;
+  color: transparent;
+  padding-bottom: 0.25em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
