--- a/src/components/BubbleList/BubbleList.css
+++ b/src/components/BubbleList/BubbleList.css
@@ -8,7 +8,7 @@
     justify-content: center;
     display: flex;
     border-radius: 30px;
-    margin-bottom: 5%;
+    margin-bottom: 10px;
 }
 
 .bubble-text {
