--- a/src/components/CardLayout/CardLayout.css
+++ b/src/components/CardLayout/CardLayout.css
@@ -9,6 +9,7 @@
     animation: ease-in-out;
     overflow: hidden;
 }
+
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0px 0px 10px 0px;
@@ -70,4 +71,12 @@
     background-clip: text;
     color: transparent;
     cursor: pointer;
+}
+
+@media screen and (max-width: 960px) {
+
+    .card {
+        margin: 0 1rem 0 1rem;
+    }
+
 }
