--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -56,7 +56,12 @@
     display: none;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1024px) {
+
+    .navbar-logo {
+        font-size: 1.5rem;
+        margin: 0.5rem 1rem 0 0;
+    }
     .NavbarItems {
         position: relative;
     }
@@ -64,7 +69,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 528px;
+        height: 431px;
         position: absolute;
         top: 80px;
         left: -100%;
@@ -72,7 +77,7 @@
         transition: all 0.5s ease; 
     }
     .nav-menu.active {
-        background:rgba(93,57,255,0.8239670868347339);
+        background:rgba(93, 57, 255, 0.966);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
@@ -126,4 +131,13 @@
     Button {
         display: none;
     }
+}
+
+@media screen and (max-width: 960px) {
+
+    .navbar-logo {
+        font-size: 1.2rem;
+        margin: 15px 5rem 0 0;
+    }
+
 }
