--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -128,7 +128,7 @@
         color: #fff;
         transition: all 0.2s ease-out;
     }
-    Button {
+    .btn-primary {
         display: none;
     }
 }
